--- a/configure.in
+++ b/configure.in
@@ -10,7 +10,7 @@ XMLSEC_VERSION_MINOR=0
 XMLSEC_VERSION_SUBMINOR=0
 XMLSEC_VERSION="$XMLSEC_VERSION_MAJOR.$XMLSEC_VERSION_MINOR.$XMLSEC_VERSION_SUBMINOR"
 XMLSEC_VERSION_INFO=`echo $XMLSEC_VERSION | awk -F. '{ printf "%d:%d:%d", $1+$2, $3, $2 }'`
-3BXMLSEC_VERSION_SAFE=`echo $XMLSEC_VERSION | sed 's/\./_/g'`
+XMLSEC_VERSION_SAFE=`echo $XMLSEC_VERSION | sed 's/\./_/g'`
 
 PACKAGE=$XMLSEC_PACKAGE
 VERSION=$XMLSEC_VERSION
