use '#define' instead of 'typedef' for the new xmlSecSize and xmlSecByte
* config.h.in configure.in include/xmlsec/xmlsec.h: use
  '#define' instead of 'typedef' for the new xmlSecSize and
   xmlSecByte types in order to keep ABI

--- a/config.h.in
+++ b/config.h.in
@@ -102,5 +102,8 @@
 /* Define if compiler has function prototypes */
 #undef PROTOTYPES
 
+/* The size of a `size_t', as computed by sizeof. */
+#undef SIZEOF_SIZE_T
+
 /* Define to 1 if you have the ANSI C header files. */
 #undef STDC_HEADERS
