--- a/configure.in
+++ b/configure.in
@@ -52,7 +52,7 @@ AC_CHECK_HEADERS([ctype.h])
 AC_CHECK_HEADERS([errno.h])
 AC_CHECK_HEADERS([ansidecl.h])
 AC_CHECK_HEADERS([time.h])
-AC_CHECK_FUNCS(printf sprintf fprintf snprintf vfprintf vsprintf vsnprintf sscanf)
+AC_CHECK_FUNCS(printf sprintf fprintf snprintf vfprintf vsprintf vsnprintf sscanf timegm)
 
 
 
@@ -638,8 +638,8 @@ AC_SUBST(XMLSEC_NO_XMLENC)
 dnl ==========================================================================
 dnl See do we need XKMS suport
 dnl ==========================================================================
-AC_MSG_CHECKING(for XMKMS support) 
-AC_ARG_ENABLE(xkms,   [  --enable-xkms           enable XKMS support (no)])
+AC_MSG_CHECKING(for XMKMS support - under development, not stable yet) 
+AC_ARG_ENABLE(xkms,   [  --enable-xkms           enable XKMS support - under development (no)])
 if test "$enable_xkms" = "yes" ; then
     XMLSEC_NO_XKMS="0"
     AC_MSG_RESULT(yes)
