--- a/win32/Makefile.msvc
+++ b/win32/Makefile.msvc
@@ -85,6 +85,7 @@ XMLSEC_OBJS = \
 	$(XMLSEC_INTDIR)\strings.obj \
 	$(XMLSEC_INTDIR)\templates.obj \
 	$(XMLSEC_INTDIR)\transforms.obj \
+	$(XMLSEC_INTDIR)\xkms.obj \
 	$(XMLSEC_INTDIR)\xmldsig.obj \
 	$(XMLSEC_INTDIR)\xmlenc.obj \
 	$(XMLSEC_INTDIR)\xmlsec.obj \
@@ -111,6 +112,7 @@ XMLSEC_OBJS_A = \
 	$(XMLSEC_INTDIR_A)\strings.obj \
 	$(XMLSEC_INTDIR_A)\templates.obj \
 	$(XMLSEC_INTDIR_A)\transforms.obj \
+	$(XMLSEC_INTDIR_A)\xkms.obj \
 	$(XMLSEC_INTDIR_A)\xmldsig.obj \
 	$(XMLSEC_INTDIR_A)\xmlenc.obj \
 	$(XMLSEC_INTDIR_A)\xmlsec.obj \
