changes to NSS config and NSS includes (patch from Tej)

--- a/xmlsec-config.in
+++ b/xmlsec-config.in
@@ -8,7 +8,7 @@ exec_prefix_set=no
 usage()
 {
     cat <<EOF
-Usage: xmlsec-config [OPTION]...
+Usage: $package-config [OPTION]...
 
 Known values for OPTION are:
 
