--- a/configure.in
+++ b/configure.in
@@ -445,7 +445,12 @@ else
       if test "$with_nspr" != "" ; then
          NSPR_PREFIX="$with_nspr"
          NSPR_CFLAGS="-I$with_nspr/include"
-         NSPR_LIBS="-L$with_nspr/lib $NSPR_LIBS_LIST"
+         if test "$with_gnu_ld" = yes
+         then
+           NSPR_LIBS="-Wl,-rpath -Wl,$with_nspr/lib -L$with_nspr/lib $NSPR_LIBS_LIST"
+         else
+           NSPR_LIBS="-L$with_nspr/lib $NSPR_LIBS_LIST"
+         fi
          NSPR_LDADDS="-L$with_nspr/lib $NSPR_LIBS_LIST"
          NSPR_INCLUDES_FOUND="yes"
          NSPR_LIBS_FOUND="yes"
@@ -472,7 +477,12 @@ else
                if test "$dir" = "/usr/lib" ; then
                   NSPR_LIBS="$NSPR_LIBS_LIST"
                else
-                  NSPR_LIBS="-L$dir $NSPR_LIBS_LIST"
+                  if test "$with_gnu_ld" = yes
+                  then
+                     NSPR_LIBS="-Wl,-rpath -Wl,$dir -L$dir $NSPR_LIBS_LIST"
+                  else
+                     NSPR_LIBS="-L$dir $NSPR_LIBS_LIST"
+                  fi
                fi
                NSPR_LIBS_FOUND="yes"
                break
@@ -509,7 +519,12 @@ else
     if test "$with_nss" != "" ; then
        NSS_PREFIX="$with_nss"
        NSS_CFLAGS="-I$with_nss/include"
-       NSS_LIBS="-L$with_nss/lib $NSS_LIBS_LIST"
+       if test "$with_gnu_ld" = yes
+       then
+          NSS_LIBS="-Wl,-rpath -Wl,$with_nss/lib -L$with_nss/lib $NSS_LIBS_LIST"
+       else
+          NSS_LIBS="-L$with_nss/lib $NSS_LIBS_LIST"
+       fi
        NSS_LDADDS="-L$with_nss/lib $NSS_LIBS_LIST"
        NSS_INCLUDES_FOUND="yes"
        NSS_LIBS_FOUND="yes"
@@ -535,7 +550,12 @@ else
              if test "$dir" = "/usr/lib" ; then
                 NSS_LIBS="$NSS_LIBS_LIST"
              else
-                NSS_LIBS="-L$dir $NSS_LIBS_LIST"
+                if test "$with_gnu_ld" = yes
+                then
+                   NSS_LIBS="-Wl,-rpath -Wl,$dir -L$dir $NSS_LIBS_LIST"
+                else
+                   NSS_LIBS="-L$dir $NSS_LIBS_LIST"
+                fi
              fi
              NSS_LIBS_FOUND="yes"
              break
