--- a/configure.in
+++ b/configure.in
@@ -434,7 +434,7 @@ else
 
     ac_mozilla_name=mozilla-$MOZILLA_VERSION
     ac_nss_lib_dir="/usr/lib /usr/local/lib /usr/lib/$ac_mozilla_name /usr/local/lib/$ac_mozilla_name"
-    ac_nss_inc_dir="/usr/include /usr/local/include /usr/include/$ac_mozilla_name /usr/local/include/$ac_mozilla_name"
+    ac_nss_inc_dir="/usr/include /usr/include/mozilla /usr/local/include /usr/local/include/mozilla /usr/include/$ac_mozilla_name /usr/local/include/$ac_mozilla_name"
 
     dnl now look for nspr
     AC_MSG_CHECKING(for nspr libraries >= $NSPR_MIN_VERSION)
