--- a/xmlsecConf.sh.in
+++ b/xmlsecConf.sh.in
@@ -2,7 +2,7 @@
 # Configuration file for using the XML library in GNOME applications
 #
 XMLSEC_LIBDIR="@XMLSEC_LIBDIR@"
-XMLSEC_INCLUDEDIR="@XMLSEC_CFLAGS@ -DXMLSEC_CRYPTO=\"@XMLSEC_CRYPTO@\""
+XMLSEC_INCLUDEDIR="@XMLSEC_CFLAGS@"
 XMLSEC_LIBS="@XMLSEC_LIBS@"
 MODULE_VERSION="xmlsec-@VERSION@-@XMLSEC_CRYPTO@"
 
