--- a/xmlsec-config.in
+++ b/xmlsec-config.in
@@ -19,11 +19,18 @@ Known values for OPTION are:
   --crypto		print the default crypto library name
   --help		display this help and exit
   --version		output version information
+  --crypto=LIB		configure with XMLSEC crypto library (one of the
+			following: none default @XMLSEC_CRYPTO_LIST@) 
+			[default "@XMLSEC_CRYPTO@"]
 EOF
 
     exit $1
 }
 
+
+#
+# first parse command line aruments
+#
 if [ $# -eq 0 ]
 then
     usage 1 1>&2
@@ -31,7 +38,7 @@ fi
 
 cflags=false
 libs=false
-
+crypto="default"
 while [ $# -gt 0 ]
 do
     case "$1" in
@@ -40,6 +47,10 @@ do
     esac
 
     case "$1" in
+    --crypto=*)
+	crypto=$optarg
+	;;
+	
     --prefix=*)
 	prefix=$optarg
 	if [ $exec_prefix_set = no ]
@@ -90,6 +101,15 @@ do
     shift
 done
 
+#
+# Get LibXML2 settings
+#
+the_xml_flags="`@LIBXML_CONFIG@ --cflags`"
+the_xml_libs="`@LIBXML_CONFIG@ --libs`"
+
+#
+# Get LibXSLT settings
+#
 the_xslt_flags=""
 the_xslt_libs=""
 if test "@LIBXSLT_WITHOUT@" = "no"; then 
@@ -97,8 +117,69 @@ if test "@LIBXSLT_WITHOUT@" = "no"; then
     the_xslt_libs="`@LIBXSLT_CONFIG@ --libs`"
 fi    
 
-the_flags="$the_flags @XMLSEC_DEFINES@ -I${prefix}/include/xmlsec1 `@LIBXML_CONFIG@ --cflags` $the_xslt_flags @XMLSEC_CRYPTO_CFLAGS@ -DXMLSEC_CRYPTO=\"@XMLSEC_CRYPTO@\""
-the_libs="$the_libs -L${exec_prefix}/lib -l@XMLSEC_CRYPTO_LIB@ -lxmlsec1 `@LIBXML_CONFIG@ --libs` $the_xslt_libs @XMLSEC_CRYPTO_LIBS@"
+#
+# Get crypto library settings
+#
+the_crypto_flags=""
+the_crypto_libs=""
+the_xmlsec_crypto_lib=""
+case "$crypto" in
+none)
+    # no crypto, just the core xmlsec engine (useful when more
+    # than one crypto engine i sused by application)
+    ;;
+
+default) 
+    the_crypto_flags="@XMLSEC_CRYPTO_CFLAGS@ -DXMLSEC_CRYPTO=\"@XMLSEC_CRYPTO@\""
+    the_crypto_libs="@XMLSEC_CRYPTO_LIBS@"
+    the_xmlsec_crypto_lib="-l@XMLSEC_CRYPTO_LIB@"
+    ;;
+    
+openssl)
+    if test "@OPENSSL_WITHOUT@" = "no"; then
+        the_crypto_flags="@OPENSSL_CFLAGS@"
+	the_crypto_libs="@OPENSSL_LIBS@"
+        the_xmlsec_crypto_lib="-l@OPENSSL_CRYPTO_LIB@"
+    else
+        echo "Error: the \"$crypto\" cryptographic library is not supported"
+	usage 1
+    fi
+    ;;
+
+gnutls)
+    if test "@GNUTLS_WITHOUT@" = "no"; then
+        the_crypto_flags="@GNUTLS_CFLAGS@"
+	the_crypto_libs="@GNUTLS_LIBS@"
+        the_xmlsec_crypto_lib="-l@GNUTLS_CRYPTO_LIB@"
+    else
+        echo "Error: the \"$crypto\" cryptographic library is not supported"
+	usage 1
+    fi
+    ;;
+
+nss)
+    if test "@NSS_WITHOUT@" = "no"; then
+        the_crypto_flags="@NSS_CFLAGS@"
+	the_crypto_libs="@NSS_LIBS@"
+        the_xmlsec_crypto_lib="-l@NSS_CRYPTO_LIB@"
+    else
+        echo "Error: the \"$crypto\" cryptographic library is not supported"
+	usage 1
+    fi
+    ;;
+    
+*)
+    echo "Error: the \"$crypto\" cryptographic library is not supported"
+    usage 1
+    ;;
+    
+esac
+
+#
+# Assemble all the settings together
+#
+the_flags="$the_flags @XMLSEC_DEFINES@ -I${prefix}/include/xmlsec1 $the_xml_flags $the_xslt_flags $the_crypto_flags"
+the_libs="$the_libs -L${exec_prefix}/lib $the_xmlsec_crypto_lib -lxmlsec1 $the_xml_libs $the_xslt_libs $the_crypto_libs"
 
 if $cflags; then
     all_flags="$the_flags"
