adjusting mozilla version

--- a/configure.in
+++ b/configure.in
@@ -401,6 +401,7 @@ dnl ==========================================================================
     
 NSS_WITHOUT="no"
 NSS_MIN_VERSION="3.2"
+MOZILLA_MIN_VERSION="1.2"
 NSS_VERSION=""
 NSS_CFLAGS="-DXMLSEC_CRYPTO=\\\"nss\\\" -DXMLSEC_CRYPTO_NSS=1"
 NSS_LIBS=""
@@ -628,6 +629,7 @@ fi
 
 AC_SUBST(NSS_WITHOUT)
 AC_SUBST(NSS_MIN_VERSION)
+AC_SUBST(MOZILLA_MIN_VERSION)
 AC_SUBST(NSS_VERSION)
 AC_SUBST(NSS_CFLAGS)
 AC_SUBST(NSS_LIBS)
