preparation for 1.0.3 release and links fixing for 0.0.x api

--- a/docs/Makefile.am
+++ b/docs/Makefile.am
@@ -28,8 +28,8 @@ docs-format:
 	for i in `find . -name "*.html" -print`; \
 	do \
 	    echo "Processing $$i"; \
-	    top_folder=`echo $$i | sed 's#/[^/]*$$#/#' | \
-			sed 's#/[^/]*/#/../#g' | sed 's#\./##'`; \
+	    top_folder=`echo $$i | sed 's#/[^/]*$$#/#' | sed 's#\./##' | \
+			sed 's#[^/]*/#../#g'`; \
 	    xsltproc --html --stringparam topfolder "$$top_folder" \
 		     --output $$i.tmp ./xmlsec.xsl $$i; \
 	    if [ $$? != 0 ]; \
