--- a/configure.in
+++ b/configure.in
@@ -905,17 +905,35 @@ AC_SUBST(XMLSEC_STATIC_BINARIES)
 dnl ==========================================================================
 dnl Final steps: xmlsec config
 dnl ==========================================================================
-XMLSEC_CFLAGS="$XMLSEC_DEFINES -I${includedir}/xmlsec1 $LIBXML_CFLAGS $LIBXSLT_CFLAGS $XMLSEC_CRYPTO_CFLAGS"
-XMLSEC_LIBS="-L${libdir} -l$XMLSEC_CRYPTO_LIB -lxmlsec1 $LIBXML_LIBS $LIBXSLT_LIBS $XMLSEC_CRYPTO_LIBS"
+XMLSEC_NO_CRYPTO_CFLAGS="$XMLSEC_DEFINES -I${includedir}/xmlsec1 $LIBXML_CFLAGS $LIBXSLT_CFLAGS"
+XMLSEC_NO_CRYPTO_LIBS="-lxmlsec1 $LIBXML_LIBS $LIBXSLT_LIBS"
+AC_SUBST(XMLSEC_NO_CRYPTO_CFLAGS)
+AC_SUBST(XMLSEC_NO_CRYPTO_LIBS)
 
+XMLSEC_OPENSSL_CFLAGS="$XMLSEC_NO_CRYPTO_CFLAGS $LIBXSLT_CFLAGS $OPENSSL_CFLAGS"
+XMLSEC_OPENSSL_LIBS="-L${libdir} -l$OPENSSL_CRYPTO_LIB $XMLSEC_NO_CRYPTO_LIBS  $OPENSSL_LIBS"
+AC_SUBST(XMLSEC_OPENSSL_CFLAGS)
+AC_SUBST(XMLSEC_OPENSSL_LIBS)
+
+XMLSEC_GNUTLS_CFLAGS="$XMLSEC_NO_CRYPTO_CFLAGS $LIBXSLT_CFLAGS $GNUTLS_CFLAGS"
+XMLSEC_GNUTLS_LIBS="-L${libdir} -l$GNUTLS_CRYPTO_LIB $XMLSEC_NO_CRYPTO_LIBS $GNUTLS_LIBS"
+AC_SUBST(XMLSEC_GNUTLS_CFLAGS)
+AC_SUBST(XMLSEC_GNUTLS_LIBS)
+
+XMLSEC_NSS_CFLAGS="$XMLSEC_NO_CRYPTO_CFLAGS $LIBXSLT_CFLAGS $NSS_CFLAGS"
+XMLSEC_NSS_LIBS="-L${libdir} -l$NSS_CRYPTO_LIB $XMLSEC_NO_CRYPTO_LIBS  $NSS_LIBS"
+AC_SUBST(XMLSEC_NSS_CFLAGS)
+AC_SUBST(XMLSEC_NSS_LIBS)
+
+XMLSEC_CFLAGS="$XMLSEC_NO_CRYPTO_CFLAGS $LIBXSLT_CFLAGS $XMLSEC_CRYPTO_CFLAGS"
+XMLSEC_LIBS="-L${libdir} -l$XMLSEC_CRYPTO_LIB $XMLSEC_NO_CRYPTO_LIBS  $XMLSEC_CRYPTO_LIBS"
 AC_SUBST(XMLSEC_CFLAGS)
 AC_SUBST(XMLSEC_LIBS)
 
-CFLAGS="$CFLAGS $XMLSEC_DEFINES"
+AC_SUBST(XMLSEC_DEFINES)
 AC_SUBST(CFLAGS)
 AC_SUBST(CPPFLAGS)
 AC_SUBST(LDFLAGS)
-AC_SUBST(XMLSEC_DEFINES)
 
 AC_SUBST(XMLSEC_CRYPTO)
 AC_SUBST(XMLSEC_CRYPTO_LIST)
@@ -925,6 +943,12 @@ AC_SUBST(XMLSEC_CRYPTO_CFLAGS)
 AC_SUBST(XMLSEC_CRYPTO_LIBS)
 AC_SUBST(XMLSEC_CRYPTO_LDADDS)
 
+XMLSEC_CRYPTO_PC_FILES_LIST=""
+for i in $XMLSEC_CRYPTO_LIST
+do
+    XMLSEC_CRYPTO_PC_FILES_LIST="$XMLSEC_CRYPTO_PC_FILES_LIST xmlsec1-$i.pc"
+done
+AC_SUBST(XMLSEC_CRYPTO_PC_FILES_LIST)
 dnl ==========================================================================
 dnl Which files to process
 dnl ==========================================================================
@@ -960,6 +984,9 @@ man/Makefile
 [xmlsec1Conf.sh:xmlsecConf.sh.in]
 [xmlsec1-config:xmlsec-config.in]
 [xmlsec1.pc:xmlsec.pc.in]
+[xmlsec1-openssl.pc:xmlsec-openssl.pc.in]
+[xmlsec1-gnutls.pc:xmlsec-gnutls.pc.in]
+[xmlsec1-nss.pc:xmlsec-nss.pc.in]
 [xmlsec1.spec:xmlsec.spec.in]
 )
 
